[auto-dev] 编码实现 (stage: coding, round: 1)